--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>jetty-servlet</artifactId>
             <version>11.0.24</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
 
     <properties>
